--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Send To BitTorrent
 Developed by Budda <http://buddasworld.co.uk>
 
 
-This extension makes clicked .torrent files go straight to your a
+This extension makes clicked .torrent files go straight to your 
 device on your network which has the official embedded BitTorrent
 web client.
 
